--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,9 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.4"
+    "nodemailer": "^6.9.15"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
